start-add-styles-for-geometry

--- a/css/styles.css
+++ b/css/styles.css
@@ -157,3 +157,23 @@ a {
 .page-main-third .page-main-second-list-text {
   text-align: left;
 }
+
+/* 
+add styles for geometry 
+(width, padding, margins, and borders) 
+and content positioning with Flexbox 
+for layout pages
+*/
+
+.page-main-first-section-title {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
