--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,28 @@ reset-to-default-settings
 ul,
 ol {
   list-style-type: none;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 a {
   text-decoration: none;
+}
+
+img {
+  display: block;
 }
 
 .logo {
@@ -164,6 +182,12 @@ add styles for geometry
 and content positioning with Flexbox 
 for layout pages
 */
+
+.page-header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 .page-main-first-section-title {
   position: absolute;
