--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,7 @@ reset-to-default-settings
 ul,
 ol {
   list-style-type: none;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
   padding-left: 0;
 }
 
@@ -24,8 +23,8 @@ h4,
 h5,
 h6,
 p {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
+  padding-left: 0;
 }
 
 a {
@@ -183,6 +182,12 @@ and content positioning with Flexbox
 for layout pages
 */
 
+.container {
+  max-width: 1128px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .page-header .container {
   display: flex;
   justify-content: space-between;
@@ -191,6 +196,7 @@ for layout pages
 }
 
 .container .header-logo {
+  flex-basis: 24px;
   padding-left: 0;
   padding-right: 0;
   margin-top: 24px;
@@ -207,6 +213,25 @@ for layout pages
   margin-right: 40px;
 }
 
+.page-main-section .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 600px;
+}
+
+.page-main-section-button {
+  margin-top: 48px;
+  border-radius: 4px;
+  width: 169px;
+  height: 56px;
+}
+
+.page-main-section-title {
+  width: 496px;
+}
+
 .page-main-first-section-title {
   position: absolute;
   width: 1px;
@@ -218,4 +243,18 @@ for layout pages
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.page-main-first-section-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 120px;
+  margin-bottom: 120px;
+}
+
+.page-main-first-section-item .container {
+  width: 264px;
+  display: flex;
+  flex-direction: column;
 }
