--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,11 @@
-/* 
-general-settings
-*/
+/* =======general-settings======= */
 body {
   font-family: "Roboto", sans-serif;
   color: #434455;
-  background-color: #fff;
+  background-color: #ffffff;
 }
-/* 
-reset-to-default-settings
-*/
+/* =======/general-settings======= */
+/* =======reset-to-default-settings=======*/
 ul,
 ol {
   list-style-type: none;
@@ -34,7 +31,8 @@ a {
 img {
   display: block;
 }
-
+/* =======/reset-to-default-settings=======*/
+/* =======header-style-settings=======*/
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -79,7 +77,7 @@ img {
   letter-spacing: 0.02em;
   color: #434455;
 }
-
+/* =======/header-style-settings=======*/
 .page-footer {
   background-color: #2e2f42;
 }
@@ -98,7 +96,7 @@ img {
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
-  color: #fff;
+  color: #ffffff;
 }
 
 .page-main-section-button {
@@ -106,7 +104,7 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  color: #fff;
+  color: #ffffff;
   background-color: #4d5ae5;
   cursor: pointer;
 }
@@ -129,9 +127,6 @@ img {
   background-color: #f4f4fd;
 }
 
-/* 
-.page-main-second-title,
-*/
 .page-main-second-title {
   font-weight: 700;
   font-size: 36px;
@@ -183,9 +178,11 @@ for layout pages
 */
 
 .container {
-  max-width: 1128px;
+  max-width: 1158px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .page-header .container {
@@ -197,17 +194,11 @@ for layout pages
 
 .container .header-logo {
   flex-basis: 24px;
-  padding-left: 0;
-  padding-right: 0;
-  margin-top: 24px;
-  margin-right: 76px;
-  margin-bottom: 24px;
-  margin-left: 40px;
 }
 
-.container .contacts-link {
+/* .container .contacts-link {
   margin-right: 40px;
-}
+} */
 
 .container .nav-link {
   margin-right: 40px;
