--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,8 @@ body {
 ul,
 ol {
   list-style-type: none;
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: 0;
   padding-left: 0;
 }
 
@@ -20,7 +21,8 @@ h4,
 h5,
 h6,
 p {
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: 0;
   padding-left: 0;
 }
 
@@ -31,8 +33,18 @@ a {
 img {
   display: block;
 }
+
+.container {
+  max-width: 1158px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 /* =======/reset-to-default-settings=======*/
 /* =======header-style-settings=======*/
+
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -47,12 +59,21 @@ img {
   color: #2e2f42;
 }
 
+.header-nav .logo {
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
 .nav-link {
+  display: block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .nav-link:hover,
@@ -72,22 +93,59 @@ img {
 }
 
 .contacts-link {
+  display: block;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-}
-/* =======/header-style-settings=======*/
-.page-footer {
-  background-color: #2e2f42;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
-.footer-logo .logo-part {
-  color: #f4f4fd;
+.header-nav {
+  display: flex;
+  column-gap: 76px;
 }
+
+.nav-list {
+  display: flex;
+  column-gap: 40px;
+}
+
+.contacts-list {
+  display: flex;
+  column-gap: 40px;
+}
+
+.page-header .container {
+  display: flex;
+  justify-content: space-between;
+  /* padding-top: 24px;
+  padding-bottom: 24px; */
+}
+
+.section-paddings {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+/* =======/header-style-settings=======*/
+
+/* =======page-1-part-1======= */
 
 .page-main-section {
   background-color: #2e2f42;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.page-main-section-container {
+  padding-top: 188px;
+  padding-left: 331px;
+  padding-right: 331px;
+  padding-bottom: 188px;
 }
 
 .page-main-section-title {
@@ -97,6 +155,8 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
   color: #ffffff;
+  /* padding-top: 188px; */
+  max-width: 496px;
 }
 
 .page-main-section-button {
@@ -107,7 +167,15 @@ img {
   color: #ffffff;
   background-color: #4d5ae5;
   cursor: pointer;
+  margin-top: 48px;
+  border: none;
+  border-radius: 4px;
+  min-width: 169px;
+  padding: 16px 32px;
 }
+
+/* =======/page-1-part-1======= */
+/* ==section-1-scrolls--page-1-part-2== */
 
 .page-main-first-section-item-title {
   font-weight: 500;
@@ -115,12 +183,47 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .page-main-first-section-item-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+
+.page-main-first-section-title {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.page-main-first-section-list {
+  display: flex;
+  column-gap: 24px;
+}
+
+.page-main-first-section-item {
+  width: calc((100% - 3 * 24px) / 4);
+  display: flex;
+  flex-direction: column;
+}
+
+/* ==/section-1-scrolls--page-1-part-2== */
+
+.page-footer {
+  background-color: #2e2f42;
+}
+
+.footer-logo .logo-part {
+  color: #f4f4fd;
 }
 
 .page-main-second {
@@ -177,75 +280,29 @@ and content positioning with Flexbox
 for layout pages
 */
 
-.container {
-  max-width: 1158px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.page-header .container {
+/* .page-header .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 72px;
-}
+} */
 
-.container .header-logo {
+/* .container .header-logo {
   flex-basis: 24px;
-}
+} */
 
 /* .container .contacts-link {
   margin-right: 40px;
 } */
 
-.container .nav-link {
+/* .container .nav-link {
   margin-right: 40px;
-}
+} */
 
-.page-main-section .container {
+/* .page-main-section .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 600px;
-}
-
-.page-main-section-button {
-  margin-top: 48px;
-  border-radius: 4px;
-  width: 169px;
-  height: 56px;
-}
-
-.page-main-section-title {
-  width: 496px;
-}
-
-.page-main-first-section-title {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-.page-main-first-section-list {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-top: 120px;
-  margin-bottom: 120px;
-}
-
-.page-main-first-section-item .container {
-  width: 264px;
-  display: flex;
-  flex-direction: column;
-}
+} */
