--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,10 @@ img {
   color: #4d5ae5;
 }
 
+.header-logo {
+  margin-right: 76px;
+}
+
 .header-logo .logo-part {
   color: #2e2f42;
 }
@@ -90,6 +94,7 @@ img {
 
 .contacts {
   font-style: normal;
+  align-items: center;
 }
 
 .contacts-link {
@@ -104,7 +109,8 @@ img {
 
 .header-nav {
   display: flex;
-  column-gap: 76px;
+  /* column-gap: 76px; */
+  align-items: center;
 }
 
 .nav-list {
