--- a/css/styles.css
+++ b/css/styles.css
@@ -323,13 +323,18 @@ img {
   color: #f4f4fd;
 }
 
+.footer-logo {
+  display: inline-block;
+  margin-bottom: 16px;
+}
+
 .page-footer-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
   width: 264px;
-  padding-top: 16px;
+  /* padding-top: 16px; */
 }
 
 /* =======/footer-scrolls======= */
