--- a/css/styles.css
+++ b/css/styles.css
@@ -243,7 +243,8 @@ img {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
-  padding-bottom: 72px;
+  /* padding-bottom: 72px; */
+  margin-bottom: 72px;
 }
 
 .page-main-second-list {
@@ -266,8 +267,9 @@ img {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
-  padding-top: 32px;
-  padding-bottom: 8px;
+  /* padding-top: 32px; */
+  /* padding-bottom: 8px; */
+  margin-bottom: 8px;
 }
 
 .page-main-second-list-text {
@@ -275,7 +277,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
-  padding-bottom: 32px;
+  /* padding-bottom: 32px; */
 }
 
 /* =======/section-2-scrolls======= */
@@ -297,17 +299,21 @@ img {
 
 .page-main-third-list-item {
   background-color: #ffffff;
-  width: calc((100% - 3 * 24px) / 4);
+  width: calc((100% - 2 * 24px) / 3);
   display: flex;
   flex-direction: column;
   flex-basis: 360px;
-  border-bottom: 1px solid #e7e9fc;
-  /* border-left: 1px solid #e7e9fc;
-  border-right: 1px solid #e7e9fc; */
+  /* border-bottom: 1px solid #e7e9fc; */
+}
+
+.third-list-item {
+  border: 1px solid #e7e9fc;
+  border-top: none;
+  padding: 32px 16px;
 }
 
 .portfolio-padding {
-  padding-left: 16px;
+  /* padding-left: 16px; */
 }
 
 /* =======/section-3-scrolls======= */
